# swagger.yaml
@@ -37,6 +37,8 @@ paths:
       summary: Get all drivers
       tags:
         - Drivers
+      security:
+        - bearerAuth: []
       responses:
         '200':
           description: A list of drivers
@@ -52,6 +54,8 @@ paths:
       summary: Create a new driver
       tags:
         - Drivers
+      security:
+        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -85,6 +89,8 @@ paths:
       summary: Get a driver by ID
       tags:
         - Drivers
+      security:
+        - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -108,6 +114,8 @@ paths:
       summary: Update a driver by ID
       tags:
         - Drivers
+      security:
+        - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -136,6 +144,8 @@ paths:
       summary: Delete a driver by ID
       tags:
         - Drivers
+      security:
+        - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -151,6 +161,12 @@ paths:
           description: Server error
 
 components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+
   schemas:
     Credentials:
       type: object
@@ -211,3 +227,7 @@ components:
         password:
           type: string
           example: supersafePwd
+        role:
+          type: string
+          enum: [admin, driver]
+          default: driver
